# rust-tinyasm

./: Cargo.toml  README.md  pi.asm
lib/binary/: shift.asm
lib/math/: divide.asm  multiply.asm
src/: machine.rs  main.rs  util.rs
src/assembler/: ast.rs  codegen.rs  grammar.md  instructions.rs  lexer.rs  main.rs  mod.rs  parser.rs  util.rs
src/assembler/parser/: ast.rs  grammar.md  lexer.rs  mod.rs
src/assembler/parser/syntax_ext/: auto_address.rs  constants.rs  imports.rs  labels.rs  mod.rs  subroutines.rs
src/assembler/syntax_ext/: auto_address.rs  constants.rs  imports.rs  labels.rs  mod.rs  subroutines.rs
src/compiler/: ast.rs  main.rs  util.rs
src/compiler/front/: lexer.rs  parselet.rs  parser.rs  tokens.rs
src/vm/: instructions.rs  main.rs  mod.rs
