[package]

name = "tiny-asm"
version = "0.0.1"
authors = ["Markus Siemens <siemens1993@gmail.com>"]

[[bin]]
name = "tiny"
path = "src/main.rs"

[profile.dev]
#opt-level = 2
debug = true

[dependencies.seq]
git = "https://github.com/japaric/seq.rs.git"

[dependencies.docopt_macros]
git = "https://github.com/docopt/docopt.rs"

[dependencies.lazy_static]
git = "https://github.com/Kimundi/lazy-static.rs"