[package]

name = "tiny-asm"
version = "0.0.1"
authors = ["Markus Siemens <siemens1993@gmail.com>"]

[[bin]]
name = "tiny"
path = "src/main.rs"


[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 1
debug = true

[profile.test]
opt-level = 0
debug = true


[dependencies]
docopt_macros = "~0.6.23"
lazy_static = "~0.1.4"

[dependencies.seq]
git = "https://github.com/japaric/seq.rs.git"