[package]

name = "tiny-asm"
version = "0.0.1"
authors = ["Markus Siemens <siemens1993@gmail.com>"]

[[bin]]
name = "tiny"
path = "src/main.rs"


[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 1
debug = true

[profile.test]
opt-level = 0
debug = true


[dependencies]
docopt = "*"
docopt_macros = "*"
lazy_static = "*"
rustc-serialize = "*"
rand = "*"
ansi_term = "*"

[dependencies.seq]
git = "https://github.com/japaric/seq.rs.git"